...
        name="(tabs)"
        options={(props) => ({
          title: 'Bytebank',
          headerRight: () => (
            <Pressable
              accessibilityRole="button"
              accessibilityLabel="Abrir perfil"
              onPress={() => props.navigation.navigate('profile')}
              style={({ pressed }) => [
                styles.profileButton,
                pressed && styles.profileButtonPressed,
              ]}>
              <CircleUserRound size={28} accessible={false} />
...
